dataset1235/2025-2/1955397009/users/209087680/executions/1107611404_2383239197.log
== RUN (2025-08-19 13:54:18)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:53:51)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:54:17)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:50:53)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:47:02)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=float(rad(input("insira o angulo:")))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:50:41)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:"))
c=sqrt(x**2+y**2-2*x*y*cos(radians(z))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:50:31)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:"))
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:47:44)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=radians(input("insira o angulo:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:55:45)
-- CODE: 
from math import *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=float(input("insira o angulo:"))
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:9.17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:50:46)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:"))
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 4
    z=input("insira o angulo:"))
                               ^
SyntaxError: unmatched ')'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:54:19)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:51:44)
-- CODE: 
import math 
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:54:57)
-- CODE: 
from math import *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
                               ^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
                               ^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
                               ^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
                               ^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
                               ^^^^^^^^^^
TypeError: must be real number, not str
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
                               ^^^^^^^^^^
TypeError: must be real number, not str
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:47:32)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=radians(input("insira o angulo:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:51:11)
-- CODE: 
import math 
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
      ^^^^
NameError: name 'sqrt' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:51:00)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:54:20)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:53:57)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:54:17)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:47:21)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=rad(input("insira o angulo:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:54:01)
-- CODE: 
import math*
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math*
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-19 13:53:50)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=input("insira o angulo:")
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:55:30)
-- CODE: 
from math import *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=float(input("insira o angulo:"))
c=sqrt(x**2+y**2-2*x*y*cos(radians(z)))
print(round(c,2))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:87.54
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:16.42
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:17.14
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:1.88
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:54.43
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
---- user output:
insira a primeira distancia: insira a segunda distancia: insira o angulo:9.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-19 13:47:16)
-- CODE: 
import math *
x=float(input("insira a primeira distancia: "))
y=float(input("insira a segunda distancia: "))
z=frad(input("insira o angulo:"))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
12.9
99.4
21.66
---- correct output:
87.54
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
12.5
17.2
64.9
---- correct output:
16.42
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
18.8
21.9
49.1
---- correct output:
17.14
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
2.33
4.09
12.3
---- correct output:
1.88
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
55.0
3.0
77.6
---- correct output:
54.43
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.0
10.0
60.0
---- correct output:
9.17
-- ERROR:
File "XXXX", line 1
    import math *
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
